design fixes and alignment fixes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -199,8 +199,14 @@ textarea{
 .padding-left-20{
   padding-left:20px;
 }
+.padding-top-25{
+  padding-top:25px;
+}
 .margin-top-15{
   margin-top: 15px !important;
+}
+.margin-bottom-35{
+  margin-bottom: 35px !important;
 }
 .white{
   color: #FFFFFF !important;
